--- a/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/CreateAccountScreen.fxml
+++ b/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/CreateAccountScreen.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="CreateAccountBG" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 37.9147%, #1a00ff 0.0%, #ff00db 100.0%);" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.LoginController">
+<AnchorPane fx:id="CreateAccountBG" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 37.9147%, #1a00ff 0.0%, #ff00db 100.0%);" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.LoginPageController">
    <children>
       <Pane fx:id="DragArea" onMouseDragged="#DragEvent" onMousePressed="#StartDragEvent" prefHeight="70.0" prefWidth="900.0" />
       <Button fx:id="CreateAccountButton" layoutX="344.0" layoutY="472.0" maxHeight="45.0" maxWidth="212.0" minHeight="45.0" minWidth="200.0" mnemonicParsing="false" onAction="#CreateAccountButtonEvent" opacity="0.9" pickOnBounds="false" prefHeight="45.0" prefWidth="212.0" style="-fx-background-color: linear-gradient(from 0.0% 0.0% to 85.782% 45.4976%, #e42a04 0.0%, #e48901 100.0%);" styleClass="LoginButton" stylesheets="@../../../../Assets/GUIassets/ButtonHover.css" text="CREATE ACCOUNT" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
