--- a/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/LoginScreen.fxml
+++ b/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/LoginScreen.fxml
@@ -19,7 +19,7 @@
 <AnchorPane fx:id="LoginBG" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #1b1b1b;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.LoginController">
    <children>
       <Pane fx:id="DragArea" onMouseDragged="#DragEvent" onMousePressed="#StartDragEvent" prefHeight="70.0" prefWidth="900.0" />
-      <Button fx:id="LoginButton" layoutX="351.0" layoutY="471.0" maxHeight="45.0" maxWidth="200.0" minHeight="45.0" minWidth="200.0" mnemonicParsing="false" onAction="#LoginButtonEvent" opacity="0.9" pickOnBounds="false" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 37.9147%, #1a00ff 0.0%, #ff00db 100.0%);" styleClass="LoginButton" stylesheets="@../../../../Assets/GUIassets/ButtonHover.css" text="LOGIN" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
+      <Button fx:id="LoginButton" layoutX="351.0" layoutY="471.0" maxHeight="45.0" maxWidth="200.0" minHeight="45.0" minWidth="200.0" mnemonicParsing="false" onAction="#attemptLogin" opacity="0.9" pickOnBounds="false" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 37.9147%, #1a00ff 0.0%, #ff00db 100.0%);" styleClass="LoginButton" stylesheets="@../../../../Assets/GUIassets/ButtonHover.css" text="LOGIN" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
          <font>
             <Font size="22.0" />
          </font>
