--- a/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/Media.fxml
+++ b/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/Media.fxml
@@ -8,33 +8,12 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.RadialGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane fx:id="mediaPaneAnchor" prefHeight="209.0" prefWidth="360.0" style="-fx-background-color: #141414; -fx-background-radius: 5 5 5 5;" styleClass="mediaPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.MediaPaneController">
+<AnchorPane fx:id="mediaPaneAnchor" onMousePressed="#displayMediaInfoEvent" prefHeight="209.0" prefWidth="360.0" style="-fx-background-color: #141414; -fx-background-radius: 5 5 5 5;" styleClass="mediaPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.MediaPaneController">
     <children>
-      <Polygon layoutX="325.0" layoutY="192.0" points="-12.5, -28.75, -34.5, -28.75, -18.25, -9.75, -23.5, 13.0, -3.0, 2.25, 17.5, 13.0, 12.75, -9.75, 30.5, -28.75, 7.0, -28.75, -3.0, -50.0" scaleX="0.75" scaleY="0.75" stroke="#976c00" strokeWidth="0.8" translateX="7.0" translateY="7.0">
-         <fill>
-            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="1.0" green="0.9238095283508301" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="0.6000000238418579" />
-                     </color>
-                  </Stop>
-               </stops>
-            </RadialGradient>
-         </fill>
-      </Polygon>
         <ImageView fx:id="mediaImage" fitHeight="209.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../Assets/CustomMediaImages/placeholder.jpg" />
