--- a/VideoPlayerFX/src/main/resources/Assets/GUIassets/KatflixStyles.css
+++ b/VideoPlayerFX/src/main/resources/Assets/GUIassets/KatflixStyles.css
@@ -72,3 +72,12 @@
     box-color: black;
     mark-color: white;
 }
+
+.videoSlider .track {
+    -fx-background-color :  linear-gradient(from 0.0% 0.0% to 100.0% 37.9147%, #1a00ff 0.0%, #ff00db 100.0%);
+    -fx-pref-height : 7.5px;
+}
+
+.videoSlider .thumb {
+    -fx-background-color :  linear-gradient(from 0.0% 0.0% to 85.782% 45.4976%, #e42a04 0.0%, #e48901 100.0%);
+}
