--- a/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/MediaScreen.fxml
+++ b/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/MediaScreen.fxml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.Double?>
+<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Polygon?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mediaScreenAnchor" minHeight="900.0" minWidth="1600.0" prefHeight="900.0" prefWidth="1600.0" stylesheets="@../../../../Assets/GUIassets/KatflixStyles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.MediaScreenController">
+<AnchorPane fx:id="mediaScreenAnchor" minHeight="900.0" minWidth="1600.0" prefHeight="900.0" prefWidth="1600.0" stylesheets="@../../../../Assets/GUIassets/KatflixStyles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.MediaScreenController">
    <children>
       <ScrollPane fx:id="mediaScrollPane" fitToHeight="true" fitToWidth="true" focusTraversable="false" hbarPolicy="NEVER" minViewportHeight="900.0" minViewportWidth="1600.0" pannable="true" prefHeight="900.0" prefViewportHeight="900.0" prefViewportWidth="1600.0" prefWidth="1600.0" style="-fx-background-color: #1c1c1c;" styleClass="edge-to-edge" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
@@ -125,7 +138,7 @@
                <content>
                   <VBox prefWidth="170.0" style="-fx-background-color: #3f3f3f;">
                      <children>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Action" textAlignment="CENTER" textFill="#a256ff" wrapText="true" VBox.vgrow="NEVER">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Action" textAlignment="CENTER" textFill="#a256ff" wrapText="true" VBox.vgrow="NEVER">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -136,7 +149,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Drama" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Drama" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -144,7 +157,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Thriller" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Thriller" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -152,7 +165,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Horror" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Horror" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -160,7 +173,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Mystery" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Mystery" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -168,7 +181,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Romance" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Romance" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -176,7 +189,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="History" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="History" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -184,7 +197,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Comedy" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Comedy" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -192,7 +205,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Krimi" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Krimi" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
